Modify Users and Products solutions

--- a/Users/Users.csproj
+++ b/Users/Users.csproj
@@ -2,13 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>d8ce17b3-84fc-4fb0-b7a8-fd54a22a3a1b</UserSecretsId>
+    <UserSecretsId>dba48d43-b3d6-4097-88c2-1c7732d2d5c4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="Profiles\" />
   </ItemGroup>
 
 </Project>
