--- a/Products/Properties/launchSettings.json
+++ b/Products/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:16535",
-      "sslPort": 44323
+      "applicationUrl": "http://localhost:28254",
+      "sslPort": 44341
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Users": {
+    "Products": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
